[package]
name = "breeze"
description = "zephyr backend"
version = "0.0.0"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "1.1"
thiserror = "1.0"
anyhow = "1.0"
nalgebra = "0.32"
partialdebug = "0.2"
